canges to math operator

--- a/calculator/src/app/body/input/input.component.html
+++ b/calculator/src/app/body/input/input.component.html
@@ -1,7 +1,7 @@
 <div class="input-container">
     <!-- use ngFor for all items in array of numers and operators? -->
      <div class="input-button">
-        <button class="input" id="1">
+        <button class="input" id="1" (click)="onClickButton('1')">
             1
         </button>
      </div>
