--- a/calculator/src/app/body/input/input.component.html
+++ b/calculator/src/app/body/input/input.component.html
@@ -4,5 +4,8 @@
         <button class="input" id="1" (click)="onClickButton('1')">
             1
         </button>
+        <button class="input" id="+" (click)="onClickButton('+')">
+            +
+        </button>
      </div>
 </div>
