changing logic 18 afternoon

--- a/calculator/src/app/body/display/display.component.html
+++ b/calculator/src/app/body/display/display.component.html
@@ -1,3 +1,5 @@
 <div class="display-container">
-    123456789
+    <!-- <div *ngIf="displayValue" class="display-screen">
+        1
+    </div> -->
 </div>
