fixed digit display

--- a/calculator/src/app/body/display/display.component.html
+++ b/calculator/src/app/body/display/display.component.html
@@ -1,5 +1,4 @@
-<div class="display-container">
-    <!-- <div *ngIf="displayValue" class="display-screen">
-        1
-    </div> -->
+<div class="display-container" id="1">
+    <!-- {{ testNumber }} -->
+    {{ displayValue }}
 </div>
