--- a/calculator/src/app/body/display/display.component.html
+++ b/calculator/src/app/body/display/display.component.html
@@ -1,4 +1,3 @@
 <div class="display-container" id="1">
-    <!-- {{ testNumber }} -->
-    {{ displayValue }}
+    <input class="display-values" type="text" inputmode="decimal" value="{{displayValue}}">
 </div>
