--- a/calculator/src/app/body/input/input.component.html
+++ b/calculator/src/app/body/input/input.component.html
@@ -1,11 +1,21 @@
 <div class="input-container">
     <!-- use ngFor for all items in array of numbers and operators? -->
-     <div class="input-button">
-        <button class="input-button-number" *ngFor="let number of numericValues" id="number" (click)="submitInput(number)">
-            {{number}}
-        </button>
-        <button class="input-button-operator" *ngFor="let operator of operatorValues" id="operator" (click)="submitInput(operator)">
-            {{operator}}
-        </button>
+     <div class="input-button-container">
+        <div class="input-button-number-container">
+            <button class="input-button-number" *ngFor="let number of numericValues" id="number" (click)="submitInput(number)">
+                {{number}}
+            </button>
+            <button id="." (click)="clearDisplay()">
+                {{operatorValues[5]}}
+            </button>
+            <button id="clear" (click)="clearDisplay()">
+                {{operatorValues[6]}}
+            </button>
+        </div>
+        <div class="input-button-operator-container">
+            <button class="input-button-operator" *ngFor="let operator of plainOperators" id="operator" (click)="submitInput(operator)">
+                {{operator}}
+            </button>
+        </div>
      </div>
 </div>
